# demo-syl-esp32

./: Cargo.toml  README.md  sdkconfig.defaults
src/: main.rs  mqtt.rs  sensores.rs  wifi.rs
